--- a/Zoom.Pan.Demo/ZoomPanDemo/ZoomPanDemo.csproj
+++ b/Zoom.Pan.Demo/ZoomPanDemo/ZoomPanDemo.csproj
@@ -4,7 +4,7 @@
 		<TargetFrameworks>net6.0-android;net6.0-ios;net6.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net6.0-windows10.0.19041.0</TargetFrameworks>
 		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net7.0-tizen</TargetFrameworks> -->
+		<!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
 		<OutputType>Exe</OutputType>
 		<RootNamespace>ZoomPanDemo</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -16,7 +16,7 @@
 
 		<!-- App Identifier -->
 		<ApplicationId>com.companyname.zoompandemo</ApplicationId>
-		<ApplicationIdGuid>6db52c29-c889-4ce3-afd0-bc3a8a80db4b</ApplicationIdGuid>
+		<ApplicationIdGuid>2FEA2137-DA16-4CA9-89FE-F14695D198F9</ApplicationIdGuid>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
@@ -49,15 +49,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0-rc.1.22426.10" />
-		<PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.3" />
-		<PackageReference Include="SkiaSharp" Version="2.88.3" />
+	  <PackageReference Include="SkiaSharp" Version="2.88.2" />
+	  <PackageReference Include="SkiaSharp.Views.Maui.Controls" Version="2.88.2" />
+	  <PackageReference Include="SkiaSharp.Views.Maui.Core" Version="2.88.2" />
 	</ItemGroup>
-
-  <!-- Fix for 2.88.3 SkiaSharp update -->
-  <ItemGroup>
-    <FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.19041.27" TargetingPackVersion="10.0.19041.27" />
-  </ItemGroup>
-  <!-- End fix  -->
   
 </Project>
